--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-v0-project",
   "version": "0.1.0",
+  "type":"module",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -43,8 +44,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
+    "cors": "^2.8.5",
     "date-fns": "^3.0.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "8.5.1",
+    "express": "^4.21.2",
     "input-otp": "1.4.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
@@ -52,6 +56,7 @@
     "mongoose": "^8.9.6",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
+    "openai": "^4.82.0",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
